image/apng not recognized in source tag https://bugs.webkit.org/show_bug.cgi?id=202785

Reviewed by Dean Jackson.

Source/WebCore:

Add image/apng as supported mime type for images on Mac/iOS and
on all the other platforms that enable apng support.

This fixes the test imported/w3c/web-platform-tests/apng/supported-in-source-type.html

* platform/MIMETypeRegistry.cpp:
(WebCore::MIMETypeRegistry::supportedImageMIMETypes):

LayoutTests:

* TestExpectations: Remove test imported/w3c/web-platform-tests/apng/supported-in-source-type.html
from the list of expected failures.

Canonical link: https://commits.webkit.org/216458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251182 268f45cc-cd09-0410-ab3c-d52691b4dbfc